analysis/low-level-api-fir/testData/lazyResolve/errors/contextParameterOnPrimaryConstructorAndClass.kt
annotation class Anno

context(s: String)
class Clazz @Anno("str") context(c:Clazz) construct<caret>or(i: Int)